--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-ae
+<!DOCTYPE html>
+<html>
+    <head lang="ru">
+        <title>All in one::Keychecker</title>
+        <link rel="icon" href="Images/key.ico">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Key checker</h1>
+        <marquee behavior="scroll" direction="left">Warning :: If your key is wrong, you're gonna be kicked! And mustæ from SrFox.</marquee>
+        <div class="container">
+            <input type="text" style="top: 180px;">
+            <button>Check</button>
+        </div>
+    </body>
+</html>
