--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <title>All in one::Keychecker</title>
         <link rel="icon" href="Images/key.ico">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>Key checker</h1>
         <marquee behavior="scroll" direction="left">Warning :: If your key is wrong, you're gonna be kicked! And mustæ from SrFox.</marquee>
         <div class="container">
-            <input type="text" style="top: 180px;">
-            <button>Check</button>
+            <input type="text" id="input" style="top: 180px;">
+            <button onclick="button()">Check</button>
         </div>
     </body>
 </html>
